<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPaleGrey"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        app:cardCornerRadius="@dimen/dimen_10dp"
        app:cardElevation="@dimen/dimen_4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRegistrationId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvImageUser"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:text="@string/label_registration_id"
                android:textColor="@color/colorTextPrimary" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvRegistrationIdValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_toEndOf="@+id/tvRegistrationId"
                android:gravity="end"
                android:textColor="@color/colorTextPrimary"
                android:textStyle="bold"
                tools:text="@string/label_registration_id" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvRegistrationIdValue"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/label_age"
                android:textColor="@color/colorTextPrimary" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAgeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tvRegistrationIdValue"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_toEndOf="@+id/tvRegistrationId"
                android:gravity="end"
                android:textColor="@color/colorTextPrimary"
                android:textStyle="bold"
                tools:text="@string/label_age" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvAgeValue"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/label_sex"
                android:textColor="@color/colorTextPrimary" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSexValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tvAgeValue"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_toEndOf="@+id/tvRegistrationId"
                android:gravity="end"
                android:textColor="@color/colorTextPrimary"
                android:textStyle="bold"
                tools:text="@string/label_sex" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSymptom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvSexValue"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/label_symptom"
                android:textColor="@color/colorTextPrimary" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSymptomValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tvSexValue"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_toEndOf="@+id/tvRegistrationId"
                android:gravity="end"
                android:textColor="@color/colorTextPrimary"
                android:textStyle="bold"
                tools:text="@string/label_symptom" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvVaxType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvSymptomValue"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/label_vax_type"
                android:textColor="@color/colorTextPrimary" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvVaxTypeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tvSymptomValue"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:layout_toEndOf="@+id/tvRegistrationId"
                android:gravity="end"
                android:textColor="@color/colorTextPrimary"
                android:textStyle="bold"
                tools:text="@string/label_vax_type" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>