<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/layout_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_background_baru"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/login"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/textView"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/bg_input"
                android:paddingLeft="15dp"/>

            <FrameLayout
                android:id="@+id/layoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textEmail"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:weightSum="10">
                <EditText
                    android:id="@+id/textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:background="@drawable/bg_input"
                    android:paddingLeft="15dp"
                    android:layout_weight="9"/>

                <ImageView
                    android:id="@+id/eye_button"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="20dp"
                    android:layout_gravity="end|center_vertical"
                    android:layout_weight="1"
                    android:src="@drawable/ic_visibility_off"
                    app:tint="@color/black" />
            </FrameLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@id/layoutPassword"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:background="@drawable/bg_input_menu"/>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>